# stylus-gas-benchmarks

./: .env.example  .gitignore  Cargo.toml  bench.sh
contracts/erc20/: Cargo.toml
contracts/erc20/src/: lib.rs  main.rs
contracts/erc721/: Cargo.toml
contracts/erc721/src/: lib.rs  main.rs
contracts/merkle_proof/: Cargo.toml
contracts/merkle_proof/src/: lib.rs  main.rs
src/: erc20.rs  lib.rs  main.rs
