[package]
name = "benches"
version = "0.0.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1.3", features = [
  "contract",
  "network",
  "providers",
  "provider-http",
  "rpc-client",
  "rpc-types-eth",
  "signer-local",
  "getrandom",
] }
dotenv = "0.15.0"
eyre = "0.6.12"
tokio = { version = "1.38.0", features = ["full"] }
