[package]
name = "erc721"
version = "0.0.0"
edition = "2021"

[dependencies]
stylus-sdk = { version = "0.5.0", default-features = false }
stylus-proc = { version = "0.5.0", default-features = false }
mini-alloc = "0.4.2"
alloy-primitives = { version = "0.3.1", default-features = false }
alloy-sol-types = { version = "0.3.1", default-features = false }

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]
